fixed spacing issue
added font-size:0;

--- a/global/global.less
+++ b/global/global.less
@@ -19,20 +19,7 @@
 @fade-out: fade-out 0.7s both ease-out;
 @fade-in-r-slide: fade-in-r-slide 1s both ease-out;
 @fade-in-l-slide: fade-in-l-slide 0.5s both ease-out;
-html,
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    -moz-transform-origin: 0 0;
-    -ms-transform-origin: 0 0;
-    -o-transform-origin: 0 0;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-}
+html {}
 
 body {
     white-space: nowrap;
@@ -63,8 +50,10 @@ header {
     opacity: 0.95;
     nav {
         white-space: nowrap;
+        font-size: 0;
         button {
             display: inline-block;
+            vertical-align: top;
             border: none;
             cursor: pointer;
             background: transparent;
@@ -73,7 +62,7 @@ header {
             -webkit-transition: background .3s ease-out, color .5s ease-out;
             transition: background .3s ease-out, color .5s ease-out;
             height: 70px;
-            width: 33%;
+            width: 33.33%;
             padding: 0;
             margin: 0;
             color: @light-purple;
